# bspterm

./: .gitignore  .rules  Cargo.toml  README.md
.github/: actionlint.yml
.github/workflows/: push_release.yml
assets/keymaps/: default-linux.json  default-macos.json  default-windows.json  vim.json
assets/keymaps/linux/: emacs.json  jetbrains.json
assets/keymaps/macos/: emacs.json  jetbrains.json
assets/scripts/: API.md  bspterm.py  ctrl_b.py  device_online_notify.py  disp_boa.py  example_hidden.py  ne5000e_mpu_collector.py  scan_mpu_ip.py
assets/settings/: default.json  default_highlight_rules.json  default_terminal_rules.json  initial_user_settings.json
assets/themes/: LICENSES
assets/themes/bspterm/: bspterm.json
crates/agent/: Cargo.toml
crates/agent/src/: db.rs
crates/agent_servers/src/: acp.rs  agent_servers.rs  claude.rs  prompt_mode.rs  terminal_mode.rs
crates/agent_ui/: Cargo.toml
crates/agent_ui/src/: agent_configuration.rs  agent_diff.rs  agent_panel.rs  agent_ui.rs  inline_assistant.rs  inline_prompt_editor.rs  language_model_selector.rs  text_thread_editor.rs  ui.rs
crates/ai_onboarding/: Cargo.toml
crates/ai_onboarding/src/: agent_api_keys_onboarding.rs
crates/askpass/src/: askpass.rs
crates/assistant_text_thread/: Cargo.toml
crates/bspterm/: CLAUDE.md  Cargo.toml  build.rs
crates/bspterm_actions/: Cargo.toml
crates/bspterm_env_vars/: Cargo.toml
crates/call_graph_panel/: CLAUDE.md  Cargo.toml
crates/call_graph_panel/src/: call_graph_panel.rs  code_server_modal.rs  svg_view.rs  trace_config_modal.rs
crates/cli/: build.rs
crates/collab/: Cargo.toml
crates/command_palette/: Cargo.toml
crates/command_panel/: Cargo.toml
crates/command_panel/src/: command_panel.rs
crates/db/: Cargo.toml
crates/debugger_ui/: Cargo.toml
crates/diagnostics/: Cargo.toml
crates/discovery_server/: Cargo.toml  settings.example.json
crates/discovery_server/src/: discovery_server.rs  main.rs  routes.rs  server.rs  state.rs
crates/edit_prediction/: Cargo.toml
crates/edit_prediction_cli/: build.rs
crates/edit_prediction_ui/: Cargo.toml
crates/editor/: CLAUDE.md  Cargo.toml
crates/editor_panel/: Cargo.toml
crates/extensions_ui/: Cargo.toml
crates/feedback/: Cargo.toml
crates/file_finder/: Cargo.toml
crates/git_ui/: Cargo.toml
crates/gpui/: CLAUDE.md
crates/highlight_editor/: CLAUDE.md  Cargo.toml
crates/i18n/: Cargo.toml
crates/inspector_ui/: Cargo.toml
crates/keymap_editor/: Cargo.toml
crates/lan_discovery/: Cargo.toml
crates/lan_discovery/src/: broadcast.rs  central.rs  discovery.rs  lan_discovery.rs
crates/lan_messaging/: Cargo.toml
crates/lan_messaging/src/: chat_modal.rs  lan_messaging.rs  messaging.rs
crates/language/: CLAUDE.md  build.rs
crates/language_model/: Cargo.toml
crates/language_models/: Cargo.toml
crates/language_tools/: Cargo.toml
crates/local_user/: Cargo.toml
crates/local_user/src/: local_user.rs  login_modal.rs  store.rs
crates/log_tracer/: CLAUDE.md  Cargo.toml
crates/log_tracer/src/: code_server_config.rs  log_tracer.rs
crates/log_tracer/src/call_graph/: builder.rs  merger.rs  mod.rs
crates/log_tracer/src/code_search/: docker.rs  file_cache.rs  local.rs  mod.rs  ssh_docker.rs
crates/log_tracer/src/language/: c_analyzer.rs  lua_analyzer.rs  mod.rs
crates/log_tracer/src/parser/: keyword_matcher.rs  mod.rs  rule_engine.rs
crates/log_tracer/src/pipeline/: branch_mark.rs  function_search.rs  graph_build.rs  log_parse.rs  mod.rs
crates/log_tracer/src/renderer/: dot.rs  mermaid.rs  mod.rs
crates/lsp/: CLAUDE.md
crates/markdown_preview/: Cargo.toml
crates/miniprofiler_ui/: Cargo.toml
crates/notifications/: Cargo.toml
crates/onboarding/: Cargo.toml
crates/outline/: Cargo.toml
crates/outline_panel/: Cargo.toml
crates/picker/: Cargo.toml
crates/platform_title_bar/: Cargo.toml
crates/project/: CLAUDE.md
crates/project_panel/: Cargo.toml
crates/python_runtime/: Cargo.toml
crates/python_runtime/src/: python_runtime.rs
crates/recent_projects/: Cargo.toml
crates/remote/: CLAUDE.md
crates/remote_connection/: CLAUDE.md
crates/remote_explorer/: CLAUDE.md  Cargo.toml
crates/remote_explorer/src/: group_edit_modal.rs  remote_explorer.rs  session_edit_modal.rs
crates/remote_explorer/src/quick_add/: auto_recognize.rs  mod.rs  multi_connection_modal.rs  ssh_section.rs  telnet_section.rs
crates/remote_server/: build.rs
crates/repl/: Cargo.toml
crates/rule_editor/: CLAUDE.md  Cargo.toml
crates/rule_editor/src/: rule_edit_modal.rs  rule_editor.rs
crates/rules_library/: Cargo.toml
crates/script_panel/: CLAUDE.md  Cargo.toml
crates/script_panel/src/: running_script_registry.rs  script_panel.rs  script_params.rs  script_params_modal.rs  script_runner.rs
crates/search/: Cargo.toml
crates/settings/: CLAUDE.md
crates/settings_profile_selector/: Cargo.toml
crates/settings_ui/: Cargo.toml
crates/sftp_panel/: CLAUDE.md  Cargo.toml
crates/sftp_panel/src/: sftp_panel.rs
crates/svg_preview/: Cargo.toml
crates/task/: Cargo.toml
crates/tasks_ui/: Cargo.toml
crates/terminal/: CLAUDE.md  Cargo.toml
crates/terminal_outline/: CLAUDE.md  Cargo.toml
crates/terminal_outline/src/: terminal_outline.rs
crates/terminal_scripting/: CLAUDE.md  Cargo.toml
crates/terminal_scripting/src/: handlers.rs  protocol.rs  server.rs  session.rs  terminal_scripting.rs  tracking.rs
crates/terminal_view/: CLAUDE.md  Cargo.toml
crates/theme_selector/: Cargo.toml
crates/title_bar/: Cargo.toml
crates/ui/: CLAUDE.md
crates/user_info_panel/: Cargo.toml
crates/user_info_panel/src/: user_info_panel.rs
crates/util/: Cargo.toml
crates/vim/: CLAUDE.md  Cargo.toml
crates/workspace/: CLAUDE.md  Cargo.toml
crates/zed/: Cargo.toml
docs/: README.md
docs/src/: linux.md  visual-customization.md
script/: bspterm-local  bump-bspterm-minor-versions  bump-bspterm-patch-version  bundle-default-config  bundle-default-config.ps1  bundle-freebsd  bundle-linux  bundle-windows.ps1  determine-release-channel  install-linux  install.sh  uninstall.sh
(+233 files in other folders)
