[package]
name = "call_graph_panel"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/call_graph_panel.rs"
doctest = false

[dependencies]
anyhow.workspace = true
editor.workspace = true
gpui.workspace = true
i18n.workspace = true
log.workspace = true
log_tracer.workspace = true
settings.workspace = true
terminal.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
bspterm_actions.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
