[package]
name = "command_panel"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/command_panel.rs"
doctest = false

[dependencies]
anyhow.workspace = true
gpui.workspace = true
i18n.workspace = true
language.workspace = true
log.workspace = true
multi_buffer.workspace = true
text.workspace = true
ui.workspace = true
editor.workspace = true
terminal.workspace = true
terminal_view.workspace = true
workspace.workspace = true
bspterm_actions.workspace = true
settings.workspace = true
collections.workspace = true
