[package]
name = "discovery_server"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[[bin]]
name = "discovery_server"
path = "src/main.rs"

[lib]
path = "src/discovery_server.rs"
doctest = false

[dependencies]
anyhow.workspace = true
axum = { version = "0.8", features = ["macros"] }
clap = { workspace = true, features = ["derive"] }
chrono.workspace = true
log.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
simplelog.workspace = true
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
