[package]
name = "lan_discovery"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/lan_discovery.rs"
doctest = false

[dependencies]
anyhow.workspace = true
futures.workspace = true
gpui.workspace = true
local_user.workspace = true
log.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
smol.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
