[package]
name = "lan_messaging"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/lan_messaging.rs"
doctest = false

[dependencies]
anyhow.workspace = true
editor.workspace = true
futures.workspace = true
gpui.workspace = true
lan_discovery.workspace = true
local_user.workspace = true
log.workspace = true
paths.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
smol.workspace = true
ui.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
workspace.workspace = true
