[package]
name = "log_tracer"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/log_tracer.rs"
doctest = false

[dependencies]
anyhow.workspace = true
gpui.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
regex.workspace = true
petgraph.workspace = true
rayon.workspace = true
parking_lot.workspace = true
futures.workspace = true
async-trait.workspace = true
aho-corasick.workspace = true
paths.workspace = true
russh.workspace = true
lru = "0.12"
dirs = "4.0"
tokio = { version = "1", features = ["process", "fs", "rt"] }

[dev-dependencies]
