[package]
name = "python_runtime"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/python_runtime.rs"
doctest = false

[dependencies]
anyhow.workspace = true
log.workspace = true
util.workspace = true
which.workspace = true
