[package]
name = "remote_explorer"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/remote_explorer.rs"
doctest = false

[dependencies]
anyhow.workspace = true
gpui.workspace = true
terminal.workspace = true
ui.workspace = true
workspace.workspace = true
uuid.workspace = true
zed_actions.workspace = true
