[package]
name = "remote_explorer"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/remote_explorer.rs"
doctest = false

[dependencies]
anyhow.workspace = true
editor.workspace = true
gpui.workspace = true
i18n.workspace = true
lan_discovery.workspace = true
lan_messaging.workspace = true
local_user.workspace = true
log.workspace = true
menu.workspace = true
settings.workspace = true
smol.workspace = true
futures.workspace = true
terminal.workspace = true
terminal_view.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
uuid.workspace = true
bspterm_actions.workspace = true
