[package]
name = "script_panel"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/script_panel.rs"
doctest = false

[dependencies]
anyhow.workspace = true
gpui.workspace = true
libc.workspace = true
log.workspace = true
parking_lot.workspace = true
serde.workspace = true
terminal_scripting.workspace = true
ui.workspace = true
uuid = { workspace = true, features = ["v4"] }
workspace.workspace = true
bspterm_actions.workspace = true
paths.workspace = true
