[package]
name = "script_panel"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/script_panel.rs"
doctest = false

[dependencies]
anyhow.workspace = true
editor.workspace = true
gpui.workspace = true
i18n.workspace = true
log.workspace = true
menu.workspace = true
parking_lot.workspace = true
serde.workspace = true
terminal_scripting.workspace = true
terminal.workspace = true
ui.workspace = true
util.workspace = true
uuid = { workspace = true, features = ["v4"] }
python_runtime.workspace = true
workspace.workspace = true
bspterm_actions.workspace = true
paths.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true
