[package]
name = "sftp_panel"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/sftp_panel.rs"
doctest = false

[dependencies]
anyhow.workspace = true
bspterm_actions.workspace = true
collections.workspace = true
editor.workspace = true
gpui.workspace = true
gpui_tokio.workspace = true
i18n.workspace = true
log.workspace = true
md5.workspace = true
menu.workspace = true
panel.workspace = true
regex.workspace = true
settings.workspace = true
terminal.workspace = true
terminal_view.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
