[package]
name = "user_info_panel"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/user_info_panel.rs"
doctest = false

[dependencies]
anyhow.workspace = true
get_if_addrs.workspace = true
gpui.workspace = true
log.workspace = true
ui.workspace = true
workspace.workspace = true
bspterm_actions.workspace = true
